JavaNetworkProgramming chapter 1 1-1 example

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 /CoreJava/ImageViewer/doc/
 /CoreJava/ImageViewer/bin/
+
 /JavaNetworkProgramming/ch4-NonBlockingCommunication/bin/
 /JavaNetworkProgramming/ch4-NonBlockingCommunication/doc/
+
+/JavaNetworkProgramming/ch1-Introduction/bin/
