--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@
 #/JavaNetworkProgramming/ch4-NonBlockingCommunication 第四章
 /JavaNetworkProgramming/ch4-NonBlockingCommunication/bin/
 /JavaNetworkProgramming/ch4-NonBlockingCommunication/doc/
+
+.classpath
